--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --fix",
+    "pretty": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
@@ -34,11 +37,21 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.0",
     "prettier": "^2.2.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "typescript": "^4.2.4"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,tsx}": [
+      "eslint --quiet --cache --fix"
+    ],
+    "**/*.{json,js,ts,jsx,tsx,html}": [
+      "prettier --write"
+    ]
   }
 }
